# OutreachPilot-AI

./: .gitignore  README.md
outreachpilot-backend/: .env.example  main.py  pyproject.toml  requirements.txt
outreachpilot-backend/app/: config.py
outreachpilot-backend/app/agents/: graph.py  llm.py  state.py
outreachpilot-backend/app/agents/nodes/: company_research_node.py  email_draft_node.py  employee_research_node.py  merge_research_node.py  report_generator_node.py  reviewer_node.py  supervisor_node.py  website_research_node.py
outreachpilot-backend/app/api/: research.py
outreachpilot-backend/app/db/: dynamodb.py
outreachpilot-backend/app/mcp/: email_mcp_client.py  email_mcp_server.py
outreachpilot-backend/app/repositories/: report_repository.py
outreachpilot-backend/app/schemas/: research.py
outreachpilot-backend/app/services/: email_service.py  pdf_service.py  research_service.py  s3_service.py  website_extractor.py
outreachpilot-backend/app/tools/: email_tools.py
outreachpilot-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
outreachpilot-frontend/src/: App.jsx  index.css
outreachpilot-frontend/src/api/: researchApi.js
outreachpilot-frontend/src/components/: EmptyState.jsx  LoadingSpinner.jsx  Navbar.jsx  ReportSection.jsx  SelectInput.jsx  StatusBadge.jsx  TextArea.jsx  TextInput.jsx
outreachpilot-frontend/src/pages/: CreateResearch.jsx  Home.jsx  NotFound.jsx  ReportDetails.jsx
outreachpilot-frontend/src/utils/: validators.js
